fixed some overflow scrolling issues on about and timeline pages

--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,10 @@
     box-sizing: border-box;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 ul {
     padding-inline-start: 0;
 }
@@ -44,6 +48,7 @@ body {
     margin: 0;
     font-family: 'Inter', sans-serif;
     background: linear-gradient(180deg, #101B2E 0%, #0B1421 100%);
+    width: 100dvw;
     overflow-x: hidden;
 }
 
